# mesos-threshold-oversubscription

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  module.cpp  module_test.cpp  os.cpp  os.hpp  os_test.cpp  provision.sh  threshold.cpp  threshold.hpp  threshold_qos_controller.cpp  threshold_qos_controller.hpp  threshold_qos_controller_test.cpp  threshold_resource_estimator.cpp  threshold_resource_estimator.hpp  threshold_resource_estimator_test.cpp  unit_test.cpp
docs/: oversubscription.graffle
src/: CMakeLists.txt  module.cpp  os.cpp  os.hpp  threshold.cpp  threshold.hpp  threshold_qos_controller.cpp  threshold_qos_controller.hpp  threshold_resource_estimator.cpp  threshold_resource_estimator.hpp
tests/: CMakeLists.txt  module_test.cpp  os_test.cpp  testutils.hpp  testutils_test.cpp  threshold_qos_controller_test.cpp  threshold_resource_estimator_test.cpp
